[package]
name = "rnote"
version = "0.1.0"
authors = ["Volodymyr Patuta <6977238-fiplox@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
chrono = "0.4.19"
walkdir = "2.3.1"
clap = "2.33.3"
dialoguer = "0.7.1"
fstream = "0.1.2"
