[package]
name = "rnote"
version = "0.1.1"
authors = ["Volodymyr Patuta <6977238-fiplox@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
walkdir = "2.3.2"
clap = "2.33.3"
dialoguer = "0.8.0"
fstream = "0.1.2"
termimad = "0.10.3"
crossterm = "0.19.0"
